# nitro

./: .gitignore  .travis.yml  Makefile  README.md  backend.py  event.py  hooks.py  kfuncs.c  kfuncs.h  libnitro.c  libnitro.h  libnitro.py  libvmi.conf  libvmi_helper.py  libvmi_helper_client.py  main.py  nitro  nitro.h  nitro.py  nitro_main.c  requirements.txt  setup.py  symbols.py  win_types.py
debian/: changelog  control  rules
debug/: memdump.py
doc/: Makefile  make.bat
doc/source/: architecture.rst  commandline.rst  conf.py  index.rst  installation.rst  introduction.rst  modules.rst  nitro.backends.linux.rst  nitro.backends.rst  nitro.backends.windows.rst  nitro.rst  testing.rst  tutorial.rst
doc/source/samples/: testing-01.txt  testing-02.txt  tutorial-01.py  tutorial-02-output.txt  tutorial-02.py  tutorial-03-output.txt  tutorial-03.py  tutorial-04.py
libnitro/: CMakeLists.txt  libnitro.c  libnitro.h  nitro.h  nitro_main.c
nitro/: backend.py  build_libvmi.py  event.py  kvm.py  libvmi.py  libvmi_helper.py  libvmi_helper_client.py  listener.py  nitro.py  process.py  symbols.py  syscall.py  win_types.py
nitro/backends/: __init__.py  arguments.py  backend.py  common.py  factory.py  process.py
nitro/backends/linux/: __init__.py  arguments.py  backend.py  process.py
nitro/backends/windows/: __init__.py  arguments.py  backend.py  process.py  types.py
nitro/libnitro/: libnitro.h
nitro/libvmi/: __init__.py  glib_build.py  libvmi.py  libvmi_cdef.h
tests/: .gitignore  README.md  cdrom.py  import_libvirt.py  layers.py  template_domain.xml  test_linux.py  test_nitro.py  test_windows.py  test_windows_debug.py  unittest.cfg  vmtest_helper.py
tests/binaries_sources/createfile/: createfile.sln
tests/linux_binaries/: .gitignore  Makefile  open.c  test_open.c  test_unlink.c  test_write.c
tests/packer-windows/: .gitignore  ubuntu.json  windows_7.json  windows_7_x64.json  windows_8_x64.json
tests/unittests/: README.md  test_linux.py
tests/vm_templates/: README.md  import_libvirt.py  template_domain.xml  template_domain_kvmi.xml  ubuntu.json  windows.json  windows_7_x64.json
(+31 files in other folders)
